zien24_implementation/org/objects/CPQB__Renewal_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>CPQB__Renewal_Date_Offset_in_Days__c</fullName>
        <label>Renewal Date Offset in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQB__Renewal_Date_Offset_in_Months__c</fullName>
        <label>Renewal Date Offset in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQB__Renewal_Date_Reference_Point__c</fullName>
        <label>Renewal Date Reference Point</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Last Order End Date</fullName>
                </value>
                <value>
                    <fullName>Last Order Start Date</fullName>
                </value>
                <value>
                    <fullName>First Order End Date</fullName>
                </value>
                <value>
                    <fullName>First Order Start Date</fullName>
                </value>
                <value>
                    <fullName>Opportunity Close Date</fullName>
                </value>
                <value>
                    <fullName>Last Recurring Order End Date</fullName>
                </value>
                <value>
                    <fullName>Last Recurring Order Start Date</fullName>
                </value>
                <value>
                    <fullName>First Recurring Order End Date</fullName>
                </value>
                <value>
                    <fullName>First Recurring Order Start Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQB__Renewal_Source__c</fullName>
        <label>Renewal Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQB__Renewal_Target__c</fullName>
        <label>Renewal Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQB__Renewal_Type__c</fullName>
        <label>Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create the Target Object</fullName>
                </value>
                <value>
                    <fullName>Create the Target Object with Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Renewal Schedule</label>
    <listViews>
        <fullName>CPQB__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Renewal Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>